        fix:  problem with connector and variable names containing non letter characters
        fix:  it is now impossible to add variables and connectors having problematic names (duplicate names, reserved ones, ...)
        impr: now using JiveDNS in place of JmDNS (JiveDNS is a fork of JmDNS incorporating submitted patches and bug fixes)
        impr: (API) can now specify a service filter when adding a listener to a service repository
        impr: (API) can now specify preferred service connector port and ask for connection to a remote host+port pair

1.3.1
r3063
        fix:  problem with sendToOneClient not sending anything in most of the classical use cases
        fix:  problem occuring when a server sends message in response to connectTo notification. Some messages where arriving too soon and client side listeners where not receiving it
        impr: (API) removed possibility to have a ConnectionRefused exception on connectTo when a connection was closed really fast. As one still have to handle the case where a connected/disconnected notification pair happen in place of this exception, it has been removed

1.3.0
r2907
        fix:  problem of wrong peerId passed to connector listeners when the client is a non-started service and has multiple connectors connected to a same connector
        fix:  no exception was thrown when adding too many connectors (more than 255) (see associated API impr below)
        fix:  querying variable value while having subscribe to its modifications was causing unnecessary remote variable listener notifications
        impr: (API) added closeConnection, closeAllConnections and removeAllConnectorListeners method to the Service interface
        impr: (API) added a ConnectorLimitReached runtime exception on Service#addConnector that is thrown when too many connectors are added to a service